fix: getMe and add unit test
